--- a/Vic.SportsStore/Vic.SportsStore.UnitTests/Vic.SportsStore.UnitTests.csproj
+++ b/Vic.SportsStore/Vic.SportsStore.UnitTests/Vic.SportsStore.UnitTests.csproj
@@ -99,7 +99,7 @@
   <ItemGroup>
     <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="CartUnitTest.cs" />
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="UnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
